spacing fix

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,6 +1,7 @@
 .hero .header{
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
 }
 .hero h1{
   color:white;
@@ -46,6 +47,7 @@
   font-weight: 400;
   border: none;
   box-shadow: none;
+  margin-bottom: 100px;
 }
 .hero-container .hero-wrapper {
   max-width: unset;
